# start_application_fastAPI

./: alembic.ini  pyproject.toml
alembic/: env.py
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 1a42b679a929_create_subscribers_table.py
app/core/: config.py
app/core/models/: __init__.py  base.py  db_helper.py  subscribers.py
