[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
black = "^24.8.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

